// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectedSamples /> should render when [samples.length=1] 1`] = `
<Fragment>
  <label>
    Compatible Samples 
    <Badge>
      1
    </Badge>
  </label>
  <SelectedSamples__SelectedSamplesList
    count={1}
  >
    <Box__BoxGroupSection
      disabled={true}
      key="foo"
    >
      bar
    </Box__BoxGroupSection>
  </SelectedSamples__SelectedSamplesList>
</Fragment>
`;

exports[`<SelectedSamples /> should return when [samples.length=0] 1`] = `
<Fragment>
  <label>
    Compatible Samples 
    <Badge>
      0
    </Badge>
  </label>
  <SelectedSamples__SelectedSamplesList
    count={0}
  />
</Fragment>
`;
